--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -18,10 +18,10 @@ jobs:
       run: docker run -v $(pwd):/host:rw pylucene_build
     
     - name: Rename artifact
-      run: cp -a python-lucene_*_amd64.deb python-lucene_${GITHUB_REF}_amd64.deb
+      run: cp -a python-lucene_*_amd64.deb python-lucene_${GITHUB_SHA}_amd64.deb
 
     - uses: actions/upload-artifact@v1
       with:
-        name: python-lucene_${GITHUB_REF}_amd64.deb
-        path: python-lucene_${GITHUB_REF}_amd64.deb
+        name: python-lucene_${GITHUB_SHA}_amd64.deb
+        path: python-lucene_${GITHUB_SHA}_amd64.deb
 
