--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,11 +17,11 @@ jobs:
     - name: Build .deb package
       run: docker run -v $(pwd):/host:rw pylucene_build
     
-    - name: Rename artifact
-      run: cp -a python-lucene_*_amd64.deb python-lucene_${GITHUB_SHA}_amd64.deb
+    - name: Copy artifact
+      run: mkdir -p deb && cp -a python-lucene_*_amd64.deb deb/
 
     - uses: actions/upload-artifact@v1
       with:
-        name: python-lucene_${{ github.sha }}_amd64.deb
-        path: python-lucene_${{ github.sha }}_amd64.deb
+        name: python-lucene_${{ github.sha }}_amd64
+        path: deb
 
