--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -26,7 +26,7 @@ jobs:
         path: deb
 
     - name: Exports SSH private key
-      run: echo ${{ secrets.SSHPrivateKey }} > id_rsa && chmod 600 id_rsa
+      run: echo "${{ secrets.SSHPrivateKey }}" > id_rsa && chmod 600 id_rsa
     
     - name: Scp artifact
       run: scp -i id_rsa -r dist/ foobar@sdtest.osdn.co.jp:~/
