--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -29,4 +29,4 @@ jobs:
       run: echo "${{ secrets.SSHPrivateKey }}" > id_rsa && chmod 600 id_rsa
     
     - name: Scp artifact
-      run: scp -o 'StrictHostKeyChecking no' -i id_rsa -r dist/ foobar@sdtest.osdn.co.jp:~/
+      run: scp -o 'StrictHostKeyChecking no' -i id_rsa -r deb/ foobar@sdtest.osdn.co.jp:~/
